@@ -2,6 +2,7 @@ Revision history for Perl extension CGI::Application::Plugin::Authentication.
 
 0.17_5  Thu Jun 04
     Fixed ActionDispatch test
+    TABLES parameter was not made mandatory in DBI driver.
 
 0.17_4  Mon Jun 02
     Fixed dependency on Test::More - must be at least version 0.90.
